# lector-resumenes-bancarios

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/api/: auth.py  main.py
app/api/routes/: views.py
app/db/: base.py  models.py
app/domain/: models.py
app/parsers/: arca_comprobantes.py  clasificador.py  clasificador_mp.py  mercadopago_pdf.py  sircreb.py  supervielle_pdf.py
app/reports/: conceptos_recurrentes.py  ley_25413.py  percepciones.py
app/services/: clientes.py  comprobantes.py  configuracion.py  monotributo.py  movimientos.py  sircreb.py  usuarios.py
app/static/: style.css
app/templates/: base.html  cliente_editar.html  clientes.html  conceptos.html  configuracion.html  dashboard.html  login.html  mercadopago.html  monotributo.html  movimientos.html  percepciones.html  reporte.html  sircreb.html  upload.html  usuario_editar.html  usuarios.html
docs/: README.md  VISION.md  bitacora.md  dominio.md
docs/adr/: 0001-modelo-dominio.md  0002-decimal-para-dinero.md  0003-stack-tecnologico.md  0004-frontend-jinja-htmx.md  0005-parsear-pdf-no-xlsx.md  0006-tipos-impuesto-separados.md  README.md  _template.md
scripts/: explorar_supervielle.py
tests/unit/: test_clasificador.py  test_movimiento.py  test_parser_arca.py  test_parser_supervielle.py  test_reporte_ley_25413.py  test_sircreb.py
